add new device access
