# app/Models/DeviceAccessRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class DeviceAccessRequest extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'user_id',
+        'phone_number',
+        'message',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
